--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 "dark": "-/Pepi-Quote/author.jpg",
 "light": "-/Pepi-Quote/author.jpg"
 },
-"Pepi-Quote/assets#files.fastn-logo.png": {
-"dark": "-/Pepi-Quote/fastn-logo.png",
-"light": "-/Pepi-Quote/fastn-logo.png"
+"Pepi-Quote/assets#files.company-logo.png": {
+"dark": "-/Pepi-Quote/company-logo.png",
+"light": "-/Pepi-Quote/company-logo.png"
 },
 "Pepi-Quote/pepi#main:title:0,1": "Quote",
 "Pepi-Quote/pepi#monochrome-dark": {
@@ -1397,7 +1397,7 @@
 </head>
 <body style="height: 100%; margin: 0;">
 
-<div data-id="main" style="height: 100%; width: 100%" class="ft_common ft_column"><div data-id="0:main" style="" class="ft_common ft_column"><div data-id="0,0:main" style="background-color: rgba(211,211,211,1); border-bottom-width: 5px; border-color: rgba(211,211,211,1); border-left-width: 5px; border-radius: 90px; border-right-width: 5px; border-top-width: 5px; color: rgba(0,0,0,1); display: block; height: 400px; margin-bottom: 50px; margin-left: 50px; margin-right: 50px; margin-top: 100px; padding: 50px; width: 700px" class="ft_common"><div data-id="0,0,0:main" style="background-color: rgba(255,255,255,1); border-bottom-width: 5px; border-color: rgba(255,255,255,1); border-left-width: 5px; border-radius: 90px; border-right-width: 5px; border-top-width: 5px; color: rgba(0,0,0,1); display: block; height: 300px; width: 600px" class="ft_common"><div data-id="0,0,0,0:main" style="color: rgba(20,20,20,1); font-family: fastn-community-github-io-lobster-font-Lobster; font-size: 32px; font-weight: 600; letter-spacing: 0px; line-height: 44px; margin-top: 30px; padding: 20px; text-align: center" class="ft_common ft_md">There is nothing impossible to those who will try.</div><div data-id="0,0,0,1:main" style="align-items: center; gap: 200px; justify-content: center" class="ft_common ft_row"><div data-id="0,0,0,1,0:main" style="gap: 10px" class="ft_common ft_row"><a data-id="0,0,0,1,0,0:parent:main" href="https://www.linkedin.com/in/amitu/" style="border-radius: 50%; height: 50px; width: 50px" class="ft_common"><img data-id="0,0,0,1,0,0:main" href="https://www.linkedin.com/in/amitu/" src="-/Pepi-Quote/author.jpg" style="border-radius: 50%; height: 50px; width: 50px" class="ft_common"></img></a><div data-id="0,0,0,1,0,1:main" style="color: rgba(0,0,0,1); font-family: fastn-community-github-io-lobster-font-Lobster; font-size: 16px; font-weight: 400; letter-spacing: 0px; line-height: 24px; padding-top: 15px; text-align: center" class="ft_common ft_md">Alexander</div></div><div data-id="0,0,0,1,1:main" style="gap: 10px" class="ft_common ft_row"><div data-id="0,0,0,1,1,0:main" style="color: rgba(0,0,0,1); font-family: fastn-community-github-io-lobster-font-Lobster; font-size: 16px; font-weight: 400; letter-spacing: 0px; line-height: 24px; padding-top: 15px; text-align: center" class="ft_common ft_md">Company Name</div><a data-id="0,0,0,1,1,1:parent:main" href="https://fastn.com" style="border-radius: 50%; height: 50px; width: 50px" class="ft_common"><img data-id="0,0,0,1,1,1:main" href="https://fastn.com" src="-/Pepi-Quote/fastn-logo.png" style="border-radius: 50%; height: 50px; width: 50px" class="ft_common"></img></a></div></div><div data-id="0,0,0,2:main" style="width: 100%" class="ft_common ft_column"></div></div></div><div data-id="0,1:main" style="background-color: rgba(128,128,128,1); border-bottom-width: 5px; border-color: rgba(128,128,128,1); border-left-width: 5px; border-radius: 90px; border-right-width: 5px; border-top-width: 5px; color: rgba(20,20,20,1); display: block; height: 100px; margin-left: 260px; margin-right: 260px; margin-top: -470px; width: 300px" class="ft_common"><div data-id="0,1,0:main" style="color: rgba(20,20,20,1); font-family: fastn-community-github-io-lobster-font-Lobster; font-size: 40px; font-weight: 700; letter-spacing: 0px; line-height: 48px; margin: 20px; text-align: center" class="ft_common ft_md">Quote</div></div></div></div><style>
+<div data-id="main" style="height: 100%; width: 100%" class="ft_common ft_column"><div data-id="0:main" style="" class="ft_common ft_column"><div data-id="0,0:main" style="background-color: rgba(211,211,211,1); border-bottom-width: 5px; border-color: rgba(211,211,211,1); border-left-width: 5px; border-radius: 90px; border-right-width: 5px; border-top-width: 5px; color: rgba(0,0,0,1); display: block; height: 400px; margin-bottom: 50px; margin-left: 50px; margin-right: 50px; margin-top: 100px; padding: 50px; width: 700px" class="ft_common"><div data-id="0,0,0:main" style="background-color: rgba(255,255,255,1); border-bottom-width: 5px; border-color: rgba(255,255,255,1); border-left-width: 5px; border-radius: 90px; border-right-width: 5px; border-top-width: 5px; color: rgba(0,0,0,1); display: block; height: 300px; width: 600px" class="ft_common"><div data-id="0,0,0,0:main" style="color: rgba(20,20,20,1); font-family: fastn-community-github-io-lobster-font-Lobster; font-size: 32px; font-weight: 600; letter-spacing: 0px; line-height: 44px; margin-top: 30px; padding: 20px; text-align: center" class="ft_common ft_md">There is nothing impossible to those who will try.</div><div data-id="0,0,0,1:main" style="align-items: center; gap: 200px; justify-content: center" class="ft_common ft_row"><div data-id="0,0,0,1,0:main" style="gap: 10px" class="ft_common ft_row"><a data-id="0,0,0,1,0,0:parent:main" href="https://www.linkedin.com/in/amitu/" style="border-radius: 50%; height: 50px; width: 50px" class="ft_common"><img data-id="0,0,0,1,0,0:main" href="https://www.linkedin.com/in/amitu/" src="-/Pepi-Quote/author.jpg" style="border-radius: 50%; height: 50px; width: 50px" class="ft_common"></img></a><div data-id="0,0,0,1,0,1:main" style="color: rgba(0,0,0,1); font-family: fastn-community-github-io-lobster-font-Lobster; font-size: 16px; font-weight: 400; letter-spacing: 0px; line-height: 24px; padding-top: 15px; text-align: center" class="ft_common ft_md">Alexander</div></div><div data-id="0,0,0,1,1:main" style="gap: 10px" class="ft_common ft_row"><div data-id="0,0,0,1,1,0:main" style="color: rgba(0,0,0,1); font-family: fastn-community-github-io-lobster-font-Lobster; font-size: 16px; font-weight: 400; letter-spacing: 0px; line-height: 24px; padding-top: 15px; text-align: center" class="ft_common ft_md">Company Name</div><a data-id="0,0,0,1,1,1:parent:main" href="https://fastn.com" style="border-radius: 50%; height: 50px; width: 50px" class="ft_common"><img data-id="0,0,0,1,1,1:main" href="https://fastn.com" src="-/Pepi-Quote/company-logo.png" style="border-radius: 50%; height: 50px; width: 50px" class="ft_common"></img></a></div></div><div data-id="0,0,0,2:main" style="width: 100%" class="ft_common ft_column"></div></div></div><div data-id="0,1:main" style="background-color: rgba(128,128,128,1); border-bottom-width: 5px; border-color: rgba(128,128,128,1); border-left-width: 5px; border-radius: 90px; border-right-width: 5px; border-top-width: 5px; color: rgba(20,20,20,1); display: block; height: 100px; margin-left: 260px; margin-right: 260px; margin-top: -470px; width: 300px" class="ft_common"><div data-id="0,1,0:main" style="color: rgba(20,20,20,1); font-family: fastn-community-github-io-lobster-font-Lobster; font-size: 40px; font-weight: 700; letter-spacing: 0px; line-height: 48px; margin: 20px; text-align: center" class="ft_common ft_md">Quote</div></div></div></div><style>
 
 
 
@@ -1744,9 +1744,9 @@ else {document.querySelector(`[data-id="0,0,0,1,1,0:main"]`).style["line-height"
 }
 window.node_change_main["0,0,0,1,1,1:main__src"] = function(data) {
 if(!data["ftd#dark-mode"]){
-document.querySelector(`[data-id="0,0,0,1,1,1:main"]`).setAttribute("src", resolve_reference("Pepi-Quote/assets#files.fastn-logo.png", data).light);
+document.querySelector(`[data-id="0,0,0,1,1,1:main"]`).setAttribute("src", resolve_reference("Pepi-Quote/assets#files.company-logo.png", data).light);
 }
-else {document.querySelector(`[data-id="0,0,0,1,1,1:main"]`).setAttribute("src", resolve_reference("Pepi-Quote/assets#files.fastn-logo.png", data).dark);}
+else {document.querySelector(`[data-id="0,0,0,1,1,1:main"]`).setAttribute("src", resolve_reference("Pepi-Quote/assets#files.company-logo.png", data).dark);}
 
 
 if (document.querySelector(`[data-id="0,0,0,1,1,1:main"]`).getAttribute("src") == "REMOVE-KEY"){
@@ -1814,11 +1814,11 @@ window.ftd.call_immutable_value_changes("Pepi-Quote/assets#files.author.jpg", "m
 window.ftd.utils.node_change_call("main","0,0,0,1,0,0:main__src", data);
 };
 
-window.set_value_main["Pepi-Quote/assets#files.fastn-logo.png"] = function (data, new_value, remaining) {
-window.ftd.utils.set_value_helper(data, "Pepi-Quote/assets#files.fastn-logo.png", remaining, new_value);
+window.set_value_main["Pepi-Quote/assets#files.company-logo.png"] = function (data, new_value, remaining) {
+window.ftd.utils.set_value_helper(data, "Pepi-Quote/assets#files.company-logo.png", remaining, new_value);
 
-window.ftd.call_mutable_value_changes("Pepi-Quote/assets#files.fastn-logo.png", "main");
-window.ftd.call_immutable_value_changes("Pepi-Quote/assets#files.fastn-logo.png", "main");
+window.ftd.call_mutable_value_changes("Pepi-Quote/assets#files.company-logo.png", "main");
+window.ftd.call_immutable_value_changes("Pepi-Quote/assets#files.company-logo.png", "main");
 window.ftd.utils.node_change_call("main","0,0,0,1,1,1:main__src", data);
 };
 
@@ -1835,10 +1835,10 @@ window.ftd.utils.set_value_helper(data, "Pepi-Quote/pepi#monochrome-dark", remai
 
 window.ftd.call_mutable_value_changes("Pepi-Quote/pepi#monochrome-dark", "main");
 window.ftd.call_immutable_value_changes("Pepi-Quote/pepi#monochrome-dark", "main");
-window.ftd.utils.node_change_call("main","0,0,0,1,0,1:main__color", data);
+window.ftd.utils.node_change_call("main","0,0,0:main__color", data);
 window.ftd.utils.node_change_call("main","0,0,0,1,1,0:main__color", data);
 window.ftd.utils.node_change_call("main","0,0:main__color", data);
-window.ftd.utils.node_change_call("main","0,0,0:main__color", data);
+window.ftd.utils.node_change_call("main","0,0,0,1,0,1:main__color", data);
 };
 
 window.set_value_main["Pepi-Quote/pepi#monochrome-light"] = function (data, new_value, remaining) {
@@ -1847,9 +1847,9 @@ window.ftd.utils.set_value_helper(data, "Pepi-Quote/pepi#monochrome-light", rema
 window.ftd.call_mutable_value_changes("Pepi-Quote/pepi#monochrome-light", "main");
 window.ftd.call_immutable_value_changes("Pepi-Quote/pepi#monochrome-light", "main");
 window.ftd.utils.node_change_call("main","0,0,0:main__background-color", data);
-window.ftd.utils.node_change_call("main","0,0,0:main__background-repeat", data);
-window.ftd.utils.node_change_call("main","0,0,0:main__background-image", data);
 window.ftd.utils.node_change_call("main","0,0,0:main__background-position", data);
+window.ftd.utils.node_change_call("main","0,0,0:main__background-image", data);
+window.ftd.utils.node_change_call("main","0,0,0:main__background-repeat", data);
 window.ftd.utils.node_change_call("main","0,0,0:main__background-size", data);
 };
 
@@ -1882,26 +1882,26 @@ window.ftd.utils.set_value_helper(data, "fastn-community.github.io/lobster-typog
 
 window.ftd.call_mutable_value_changes("fastn-community.github.io/lobster-typography#types", "main");
 window.ftd.call_immutable_value_changes("fastn-community.github.io/lobster-typography#types", "main");
-window.ftd.utils.node_change_call("main","0,0,0,1,1,0:main__letter-spacing", data);
 window.ftd.utils.node_change_call("main","0,0,0,1,1,0:main__line-height", data);
 window.ftd.utils.node_change_call("main","0,0,0,1,1,0:main__font-size", data);
+window.ftd.utils.node_change_call("main","0,1,0:main__font-weight", data);
+window.ftd.utils.node_change_call("main","0,1,0:main__font-family", data);
 window.ftd.utils.node_change_call("main","0,0,0,0:main__font-family", data);
+window.ftd.utils.node_change_call("main","0,0,0,1,0,1:main__font-family", data);
+window.ftd.utils.node_change_call("main","0,0,0,1,0,1:main__font-weight", data);
+window.ftd.utils.node_change_call("main","0,0,0,1,1,0:main__font-family", data);
+window.ftd.utils.node_change_call("main","0,0,0,1,1,0:main__font-weight", data);
 window.ftd.utils.node_change_call("main","0,0,0,1,0,1:main__font-size", data);
+window.ftd.utils.node_change_call("main","0,1,0:main__letter-spacing", data);
+window.ftd.utils.node_change_call("main","0,1,0:main__line-height", data);
+window.ftd.utils.node_change_call("main","0,0,0,0:main__line-height", data);
 window.ftd.utils.node_change_call("main","0,0,0,0:main__font-size", data);
 window.ftd.utils.node_change_call("main","0,0,0,0:main__font-weight", data);
-window.ftd.utils.node_change_call("main","0,1,0:main__line-height", data);
 window.ftd.utils.node_change_call("main","0,1,0:main__font-size", data);
-window.ftd.utils.node_change_call("main","0,0,0,0:main__letter-spacing", data);
-window.ftd.utils.node_change_call("main","0,0,0,1,0,1:main__font-weight", data);
 window.ftd.utils.node_change_call("main","0,0,0,1,0,1:main__letter-spacing", data);
 window.ftd.utils.node_change_call("main","0,0,0,1,0,1:main__line-height", data);
-window.ftd.utils.node_change_call("main","0,0,0,1,0,1:main__font-family", data);
-window.ftd.utils.node_change_call("main","0,1,0:main__letter-spacing", data);
-window.ftd.utils.node_change_call("main","0,0,0,1,1,0:main__font-family", data);
-window.ftd.utils.node_change_call("main","0,1,0:main__font-family", data);
-window.ftd.utils.node_change_call("main","0,0,0,0:main__line-height", data);
-window.ftd.utils.node_change_call("main","0,1,0:main__font-weight", data);
-window.ftd.utils.node_change_call("main","0,0,0,1,1,0:main__font-weight", data);
+window.ftd.utils.node_change_call("main","0,0,0,1,1,0:main__letter-spacing", data);
+window.ftd.utils.node_change_call("main","0,0,0,0:main__letter-spacing", data);
 };
 
 window.set_value_main["ftd#dark-mode"] = function (data, new_value, remaining) {
@@ -1909,20 +1909,20 @@ window.ftd.utils.set_value_helper(data, "ftd#dark-mode", remaining, new_value);
 
 window.ftd.call_mutable_value_changes("ftd#dark-mode", "main");
 window.ftd.call_immutable_value_changes("ftd#dark-mode", "main");
-window.ftd.utils.node_change_call("main","0,1:main__color", data);
-window.ftd.utils.node_change_call("main","0,1,0:main__color", data);
 window.ftd.utils.node_change_call("main","0,0,0,0:main__color", data);
-window.ftd.utils.node_change_call("main","0,0,0:main__background-color", data);
 window.ftd.utils.node_change_call("main","0,0,0,1,0,0:main__src", data);
-window.ftd.utils.node_change_call("main","0,0,0:main__background-repeat", data);
-window.ftd.utils.node_change_call("main","0,0:main__color", data);
-window.ftd.utils.node_change_call("main","0,0,0:main__background-position", data);
-window.ftd.utils.node_change_call("main","0,0,0:main__background-size", data);
-window.ftd.utils.node_change_call("main","0,0,0:main__background-image", data);
-window.ftd.utils.node_change_call("main","0,0,0,1,0,1:main__color", data);
 window.ftd.utils.node_change_call("main","0,0,0,1,1,0:main__color", data);
-window.ftd.utils.node_change_call("main","0,0,0,1,1,1:main__src", data);
+window.ftd.utils.node_change_call("main","0,0,0:main__background-repeat", data);
+window.ftd.utils.node_change_call("main","0,1,0:main__color", data);
+window.ftd.utils.node_change_call("main","0,0,0:main__background-position", data);
+window.ftd.utils.node_change_call("main","0,0,0:main__background-image", data);
+window.ftd.utils.node_change_call("main","0,0,0:main__background-size", data);
+window.ftd.utils.node_change_call("main","0,0,0,1,0,1:main__color", data);
+window.ftd.utils.node_change_call("main","0,0:main__color", data);
+window.ftd.utils.node_change_call("main","0,0,0:main__background-color", data);
 window.ftd.utils.node_change_call("main","0,0,0:main__color", data);
+window.ftd.utils.node_change_call("main","0,0,0,1,1,1:main__src", data);
+window.ftd.utils.node_change_call("main","0,1:main__color", data);
 };
 
 window.set_value_main["ftd#default-colors"] = function (data, new_value, remaining) {
@@ -1930,9 +1930,9 @@ window.ftd.utils.set_value_helper(data, "ftd#default-colors", remaining, new_val
 
 window.ftd.call_mutable_value_changes("ftd#default-colors", "main");
 window.ftd.call_immutable_value_changes("ftd#default-colors", "main");
-window.ftd.utils.node_change_call("main","0,0,0,0:main__color", data);
-window.ftd.utils.node_change_call("main","0,1:main__color", data);
 window.ftd.utils.node_change_call("main","0,1,0:main__color", data);
+window.ftd.utils.node_change_call("main","0,1:main__color", data);
+window.ftd.utils.node_change_call("main","0,0,0,0:main__color", data);
 };
 
 window.set_value_main["ftd#device"] = function (data, new_value, remaining) {
@@ -1940,26 +1940,26 @@ window.ftd.utils.set_value_helper(data, "ftd#device", remaining, new_value);
 
 window.ftd.call_mutable_value_changes("ftd#device", "main");
 window.ftd.call_immutable_value_changes("ftd#device", "main");
+window.ftd.utils.node_change_call("main","0,0,0,1,0,1:main__letter-spacing", data);
 window.ftd.utils.node_change_call("main","0,0,0,1,0,1:main__line-height", data);
-window.ftd.utils.node_change_call("main","0,0,0,1,1,0:main__line-height", data);
+window.ftd.utils.node_change_call("main","0,0,0,1,0,1:main__font-weight", data);
+window.ftd.utils.node_change_call("main","0,1,0:main__letter-spacing", data);
+window.ftd.utils.node_change_call("main","0,0,0,1,1,0:main__font-size", data);
+window.ftd.utils.node_change_call("main","0,0,0,1,1,0:main__font-family", data);
+window.ftd.utils.node_change_call("main","0,1,0:main__line-height", data);
+window.ftd.utils.node_change_call("main","0,0,0,0:main__font-family", data);
+window.ftd.utils.node_change_call("main","0,1,0:main__font-weight", data);
+window.ftd.utils.node_change_call("main","0,0,0,0:main__font-size", data);
+window.ftd.utils.node_change_call("main","0,0,0,0:main__line-height", data);
+window.ftd.utils.node_change_call("main","0,0,0,0:main__font-weight", data);
+window.ftd.utils.node_change_call("main","0,0,0,1,0,1:main__font-size", data);
+window.ftd.utils.node_change_call("main","0,0,0,0:main__letter-spacing", data);
+window.ftd.utils.node_change_call("main","0,0,0,1,1,0:main__letter-spacing", data);
+window.ftd.utils.node_change_call("main","0,1,0:main__font-family", data);
+window.ftd.utils.node_change_call("main","0,0,0,1,0,1:main__font-family", data);
 window.ftd.utils.node_change_call("main","0,1,0:main__font-size", data);
 window.ftd.utils.node_change_call("main","0,0,0,1,1,0:main__font-weight", data);
-window.ftd.utils.node_change_call("main","0,0,0,1,0,1:main__font-family", data);
-window.ftd.utils.node_change_call("main","0,0,0,0:main__font-weight", data);
-window.ftd.utils.node_change_call("main","0,0,0,1,0,1:main__letter-spacing", data);
-window.ftd.utils.node_change_call("main","0,1,0:main__line-height", data);
-window.ftd.utils.node_change_call("main","0,0,0,0:main__letter-spacing", data);
-window.ftd.utils.node_change_call("main","0,0,0,0:main__font-family", data);
-window.ftd.utils.node_change_call("main","0,0,0,0:main__line-height", data);
-window.ftd.utils.node_change_call("main","0,1,0:main__letter-spacing", data);
-window.ftd.utils.node_change_call("main","0,0,0,0:main__font-size", data);
-window.ftd.utils.node_change_call("main","0,0,0,1,0,1:main__font-weight", data);
-window.ftd.utils.node_change_call("main","0,0,0,1,1,0:main__letter-spacing", data);
-window.ftd.utils.node_change_call("main","0,1,0:main__font-weight", data);
-window.ftd.utils.node_change_call("main","0,1,0:main__font-family", data);
-window.ftd.utils.node_change_call("main","0,0,0,1,1,0:main__font-family", data);
-window.ftd.utils.node_change_call("main","0,0,0,1,0,1:main__font-size", data);
-window.ftd.utils.node_change_call("main","0,0,0,1,1,0:main__font-size", data);
+window.ftd.utils.node_change_call("main","0,0,0,1,1,0:main__line-height", data);
 };
 
 
